--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,10 @@
 /*https://pngfre.com/moon-png/moon-from-pngfre-10-1/*/
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+@font-face {
+  font-family: cloisterBlack ;
+  src: url('../../public/CloisterBlack.ttf');
+}
 
 * { 
     margin: 0;
@@ -8,54 +12,131 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
-
 body {
-    --dot-bg: rgb(12, 12, 12);
+    --dot-bg: rgb(5, 5, 5);
     --dot-color: rgb(255, 255, 255);
     --dot-size: 1px;
-    --dot-space: 22px;
+    --dot-space: 12px;
       background:
           linear-gradient(90deg, var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
           linear-gradient(var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
           var(--dot-color);
-          margin: 0;
-          min-height: 200vh;
-          font-size: 0;
+      font: 1.2rem;
+
 }
 
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 16px 20px 30px 20px;
-    display: flex;
-    align-items: center;
-    transition: 0.3s ease-out;
-    backdrop-filter: blur(8px) brightness(1.2);
-    -webkit-backdrop-filter: blur(8px) brightness(1.2);
-    text-shadow: 0 0 5px rgba(0,0,0,0.5);
-    color: white;
-    font-size: 16px;
+.container{
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 25% 40% 35%;
+  grid-template-rows:  1fr 1fr 1fr;
+  grid-template-areas:"h h h"
+                      "m m m"
+                      "f f f"
+  ;
+  grid-row-gap: 10px;
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
-    &:hover,
-    &:focus {
-      text-decoration: underline;
-    }
-  }
+/*MENU*/
+header {
+  background-color: black;
+  grid-area: h;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: fit-content;
+}
 
-  .list {
-    list-style-type: none;
-    margin-left: auto;
-    display: none;
-    @media (min-width: 640px) {
-      display: flex;
-    }
-    li {
-      margin-left: 20px;
-    }
-  }
+.menu{
+  display: flex;
+  align-items: center;
+}
+
+.menu > li{
+  display:contents;
+  padding: 10px;
+}
+
+.menu > ul > li > a{
+ color: #F1EEDB;
+}
+
+.menu > ul > li > a:hover {
+  text-decoration: overline;
+  color: #939186;
+}
+
+li {
+  padding: 3px;
+}
+
+/*Fim MENU*/
+
+/*Main*/
+main {
+  grid-area: m;
+  justify-self: center;
+  align-self: center;
+  margin-left:10px;
+  margin-right:10px;
+}
+
+/*Fim Main*/
+
+/*Footer*/
+footer {
+  background-color: black;
+  grid-area: f;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: auto;
+  align-items: center;
+  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height: fit-content;
+}
+
+/*Fim Footer*/
+
+a, p, h1, h2, h3, h4 {
+  color: #fcfbf3;
+  text-decoration: none;
+}
+
+h1 {
+  font-family: cloisterBlack;
+  font-size: 3rem;
+}
+
+.hr {
+  width: 99.9%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.view {
+  height: 90vh;
+
+}
+
+.imageCentered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.midLinks {
+  text-align: center;
+}
+
+.midLinks > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
